name:                async-refresh-tokens
version:             0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/mtesseract/async-refresh-tokens#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          mtesseract@silverratio.net
copyright:           (c) 2017 Moritz Schulte
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Concurrent.Async.Refresh.Tokens
  other-modules:       Control.Concurrent.Async.Refresh.Tokens.Types
                     , Control.Concurrent.Async.Refresh.Tokens.Lenses
                     , Control.Concurrent.Async.Refresh.Tokens.Conf
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , async-refresh
                     , monad-logger
                     , lifted-async
                     , stm
                     , lens
                     , formatting
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite async-refresh-tokens-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , classy-prelude
                     , async-refresh-tokens
                     , HUnit
                     , test-framework
                     , test-framework-hunit
                     , criterion
                     , monad-logger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-type-defaults
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/mtesseract/async-refresh-tokens
